Header info corrected

--- a/VLH.css
+++ b/VLH.css
@@ -3,10 +3,9 @@
 /*
 /*	  V L H. c s s
 /*
-/*	  General model template for an ANSI/SLAS-format 96-well consumable.
-/*	  and its particular instances.
+/*	  Style used for typical VLH HTML presentations
 /*
-/*	  Last revision: IH 2014-07-30
+/*	  Last revision: IH 2014-08-20
 /*
 /*    (C)2014 Lexogen GmbH
 /*---------------------------------------------------------------------------------
