Plate unification: all labware is now derived from a common UniversalPlate

--- a/VLH.css
+++ b/VLH.css
@@ -3,9 +3,10 @@
 /*
 /*	  V L H. c s s
 /*
-/*	  Style used for typical VLH HTML presentations
+/*	  General model template for an ANSI/SLAS-format 96-well consumable.
+/*	  and its particular instances.
 /*
-/*	  Last revision: IH 2014-08-20
+/*	  Last revision: IH 2014-07-30
 /*
 /*    (C)2014 Lexogen GmbH
 /*---------------------------------------------------------------------------------
